# smart-mes

./: .dockerignore  .env  LICENSE  docker-compose.yml  test_fins.py
.claude/: settings.local.json
services/data-collector-service/: Dockerfile  pyproject.toml
services/data-collector-service/src/: main.py
services/data-collector-service/src/api/v1/: __init__.py  devices.py  discovery.py  plc.py  read.py  write.py
services/data-collector-service/src/config/: settings.py
services/data-collector-service/src/models/: connection.py
services/data-collector-service/src/protocols/: base.py  fins_client.py  modbus_client.py  protocol_factory.py
services/data-collector-service/src/schemas/: tag_schema.py
services/data-collector-service/src/services/: connection_manager.py  continuous_poller.py  data_reader.py  data_writer.py  tag_discovery.py
services/device-management-service/: Dockerfile  pyproject.toml
services/device-management-service/src/: main.py
services/device-management-service/src/config/: database.py  settings.py
services/device-management-service/src/infrastructure/: device_profiler.py  network_scanner.py  port_scanner.py  protocol_prober.py
services/device-management-service/src/schemas/: analytics_schema.py  device_schema.py  discovery_schema.py
services/device-management-service/src/services/: analytics_service.py  analytics_worker.py  device_registry.py  discovery_service.py  (+1 more)
services/production-service/: Dockerfile  pyproject.toml
services/production-service/src/: main.py
shared/messaging/: publisher.py
shared/models/: events.py
(+28 files in other folders)
