[tool.poetry]
name = "data-collector-service"
version = "0.1.0"
description = "PLC data collection service with FINS/Modbus/OPC UA support"
authors = ["Kaveesha"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
pymodbus = "^3.6.0"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
greenlet = "^3.0.0"
loguru = "^0.7.2"
python-dotenv = "^1.0.0"
aio-pika = "^9.0.0"
websockets = "^12.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
